syntax = "proto3";

package booksstockssstocks;

import "google/protobuf/timestamp.proto";

option go_package = ".;proto";

service BooksStocksService {
    rpc AddBooksStocks(BooksStocksRequest) returns (BaseResponse);
    rpc EditBooksStocks(BooksStocksRequest) returns (BaseResponse);
    rpc DeleteBooksStocks(BooksStocksIdRequest) returns (BaseResponse);
    rpc GetBooksStocks(BooksStocksIdRequest) returns (BaseResponse);
}

message BooksStocksRequest {
    int32 id = 1;
    int32 bookId = 2;
    int32 totalStock = 3;
    int32 availableStock = 4;
}

message BooksStocksIdRequest {
    int32 id = 1;
}

message BooksStocksResponse {
    int32 id = 1;
    int32 bookId = 2;
    int32 totalStock = 3;
    int32 availableStock = 4;
    google.protobuf.Timestamp CreatedAt = 6;
    google.protobuf.Timestamp UpdatedAt = 7;
}

message BaseResponse {
  string message = 1;
  BooksStocksResponse booksstocks = 2;
}